# bb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/bb/: __init__.py  alias.py  api.py  auth.py  config.py  exceptions.py  git.py  live_table.py  models.py  pr.py  typeshed.py  typing.py  utils.py  version.py
src/bb/cli/: alias.py  auth.py  git.py  main.py  pr.py
src/bb/core/: api.py  config.py  git.py
src/bb/models/: __init__.py  base.py  file_diff.py  filediff.py  pullrequest.py  repository.py  user.py
src/bb/tui/: __init__.py  app.py  models.py  state.py  types.py
src/bb/tui/css/: pr_detail.tcss
src/bb/tui/handlers/: __init__.py  input.py  keys.py
src/bb/tui/screens/: __init__.py  base.py  pr_detail.py  pr_diff.py  pr_list.py
src/bb/tui/views/: __init__.py  detail_view.py  diff_view.py  list_view.py
src/bb/tui/widgets/: __init__.py  file_diff.py  live_table.py  selectable_table.py  stat_display.py
src/tests/: test_config.py  test_git.py  test_tui.py
