[project]
name = "bb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tjk", email = "tkells@atlassian.com" }
]
dependencies = [
    "rich>=13.7.1",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
bb = "bb:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]
