[project]
name = "bb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tjk", email = "tkells@atlassian.com" }
]
dependencies = [
    "rich>=13.7.1",
    "click>=8.1.7",
    "ipdb>=0.13.13",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "ipdb>=0.13.13",
    "textual>=0.63.5",
    "requests>=2.32.2",
    "arrow>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
bb = "bb:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 120

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]

[tool.pytest.ini_options]
addopts = "--cov=bb"
