[project]
name = "bitbucket-cloud-cli"
description = "Atlassian Bitbucket Cloud CLI"
dynamic = ["version"]
authors = [
    { name = "tjk", email = "tkells@atlassian.com" }
]
dependencies = [
    "rich>=13.7.1",
    "click>=8.1.7",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "ipdb>=0.13.13",
    "textual>=1.0.0",
    "requests>=2.32.2",
    "arrow>=1.3.0",
    "readchar>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

# Dynamically derive the version number from bb.version
[tool.hatch.version ]
path = "src/bb/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bb"]

[project.scripts]
bb = "bb:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "ipdb>=0.13.13",
]

[tool.rye.scripts]
lint = { chain = ["lint:isort", "lint:black", "lint:flake8" ] }
"lint:isort" = "isort src --check"
"lint:black" = "black --check src"
"lint:flake8" = "flake8 src"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=bb"
